2010-10-26  Jean Delvare  <khali@linux-fr.org>

	Update to support Intel AP-485 (CPUID) revision 36 (was 32).

	* dmidecode.c: Update the link to the AP-485 document, the revision
	  and the table number.
	* dmidecode.c: Update two CPU flag descriptions (FXSR and HTT).
	  Drop CPU flag IA64.
	* dmidecode.c: Update the list of processors for which we decode the
	  CPUID flags.

2010-10-11  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: One more SMBIOS version fix-up case.
	* Makefile: Rework BSD make compatibility trick. The previous
	  trick would break GNU make 3.82.

2010-09-29  Anton Arapov  <anton@redhat.com>

	* util.c: makes dmidecode fall back to regular reads if the mmap
	  fails. Patch from Olof Johansson.

2010-09-21  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Fix Xeon 7xxx entries in CPU name lookup table
	  (DMI type 4). Patch from Paul Flo Williams.

2009-08-28  Jarod Wilson  <jarod@redhat.com>

	Update to support SMBIOS specification version 2.6.1.

	* dmidecode.c: Add processor types "Dual-Core Xeon 5200",
	  "Dual-Core Xeon 7200", "Quad-Core Xeon 7300", "QuadCore Xeon 7400",
	  "Multi-Core Xeon 7400", "Core i7", "Dual-Core Celeron",
	  "Multi-Core Xeon", "Dual-Core Xeon 3xxx", "Quad-Core Xeon 3xxx",
	  "Dual-Core Xeon 5xxx", "Quad-Core Xeon 5xxx", "Dual-Core Xeon 7xxx",
	  "Quad-Core Xeon 7xxx" and "Multi-Core Xeon 7xxx" (DMI type 4).
	* dmidecode.c: Add slot types "PCI Express Gen 2 x1",
	  "PCI Express Gen 2 x2", "PCI Express Gen 2 x4",
	  "PCI Express Gen 2 x8" and "PCI Express Gen 2 x16" (DMI type 9).
	* dmidecode.c: Add memory device types "DDR3" and "FB-DIMM"
	  (DMI type 17).
	* dmidecode.c: Add cache associativity types "12-way Set-associative",
	  "24-way Set-associative", "32-way Set-associative",
	  "48-way Set-associative" and "64-way Set-associative" (DMI type 7).

2009-07-27  Jean Delvare  <khali@linux-fr.org>

	* dmioem.c: Recognize "Hewlett-Packard" as a possible DMI vendor