@@ -1,3 +1,8 @@
+2010-11-09  Jean Delvare  <khali@linux-fr.org>
+
+	* dmidecode.c: Drop redundant/obsolete references to
+	  CIM_Processor.Family.
+
 2010-10-26  Jean Delvare  <khali@linux-fr.org>
 
 	Update to support Intel AP-485 (CPUID) revision 36 (was 32).
